[package]
name = "num-runtime-fmt"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"

[dependencies]
iterext = { git = "https://github.com/coriolinus/iterext.git", branch = "main" }
lazy_static = "1.4.0"
regex = "1.4.3"
thiserror = "1.0.23"
